--- a/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular_verification_metal.Rmd
@@ -85,7 +85,7 @@ ProcessMolFunctions <- c("k_Adsorption", "k_Advection", "k_Burial",
                          "k_Volatilisation")
 
 #read in K matrix from excel
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4.05_20240816_",substance,".xlsm") 
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SBExcel_verification_",substance,".xlsm")
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
