--- a/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
@@ -73,8 +73,7 @@ library(tidyverse)
 library (ggplot2)
 library(plotly)
 
-# SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SimpleBox4plastics_rev009-1_",substance,".xlsx") 
-SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/20240815 SimpleBox4plastics_",substance,".xlsx")
+SBExcelName <- paste0("vignettes/Development/Quality control/SBExcel/SBExcel_verification_",substance,".xlsm")
 
 SBexcel.K <- read.xlsx(SBExcelName,
                   colNames = FALSE,
