--- a/vignettes/x.-Solver-use.Rmd
+++ b/vignettes/x.-Solver-use.Rmd
@@ -9,13 +9,6 @@ editor_options:
     wrap: 72
 ---
 
-```{r setup, include=FALSE, warning=FALSE, message=FALSE}
-knitr::knit_meta()
-knitr::opts_chunk$set(echo = TRUE)
-projectRoot <- paste(getwd(), "..", sep = "/")
-knitr::opts_knit$set(root.dir = projectRoot) #assuming vignette is in a direct subfolder of the project
-```
-
 ## Initialize World
 
 First, we will load the necessary packages and initialize the world for
@@ -24,6 +17,7 @@ molecules.
 ```{r Initialize World, warning=FALSE, message=FALSE}
 library(lhs)
 library(tidyverse)
+library(treemapify)
 
 source("baseScripts/initWorld_onlyMolec.R")
 ```
@@ -80,7 +74,7 @@ function to calculate the masses in each compartment.
 
 ```{r Solve steady state deterministically, warning=FALSE, message=FALSE}
 # Define the solver function to use. For steady state calculations, this is always "SteadyODE"
-World$NewSolver("SteadyODE")
+World$NewSolver("SteadyStateSolver")
 
 # Solve with the emissions we defined in the previous chunk
 World$Solve(emissions = emissions)
